...
        android:layout_height="wrap_content"
        android:text="No results found"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/addBeerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/beersRecyclerView"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/beersRecyclerView"
        android:layout_width="0dp"
...
